--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <img id="photo" alt="">
+    <h3 id="name"></h3>
+    <section>
+        <h4>Additional info:</h4>
+        <h4 id="info"></h4>
+    </section>
+    <button data-attr="age">Age</button>
+    <button data-attr="email">Email</button>
 
+    <button data-attr="phone">Phone</button>
+    <br>
+    <button id="getUser">GET ANOTHER USER</button>
+
+    
+
+    <script src="script.js"></script>
 </body>
-
 </html>
